# example_juce_app

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
01_house_tutorial/: CMakeLists.txt
01_house_tutorial/include/: GrassComponent.h  MainComponent.h  RoofComponent.h  SunComponent.h  TextComponent.h  WallComponent.h
01_house_tutorial/src/: GrassComponent.cpp  MainComponent.cpp  RoofComponent.cpp  SunComponent.cpp  TextComponent.cpp  WallComponent.cpp
02_slider/: CMakeLists.txt
02_slider/src/: MainComponent.cpp  MainComponent.h
03_slider_listener/: CMakeLists.txt
03_slider_listener/src/: MainComponent.cpp  MainComponent.h
04_look_and_feel/: CMakeLists.txt
04_look_and_feel/src/: MainComponent.cpp  MainComponent.h
05_look_and_feel_part_2/: CMakeLists.txt
05_look_and_feel_part_2/src/: MainComponent.cpp  MainComponent.h
06_generating_audio_output/: CMakeLists.txt
06_generating_audio_output/src/: Main.cpp  MainComponent.cpp  MainComponent.h
07_basic_wavetable_synthesis/: CMakeLists.txt
07_basic_wavetable_synthesis/src/: MainComponent.cpp  MainComponent.h
08_gui_to_control_oscillator/: CMakeLists.txt
08_gui_to_control_oscillator/src/: MainComponent.cpp  MainComponent.h
app/: CMakeLists.txt
app/src/: PluginEditor.cpp  PluginProcessor.cpp
cmake/: cpm.cmake  dependencies.cmake
test/: CMakeLists.txt
